# QML-qcnn-medmnist

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  requirements-wsl.txt
.github/workflows/: ci.yml
notebooks/: qcnn_medmnist_pipeline.ipynb
scripts/: clean_artifacts.sh
src/: __init__.py
src/datasets/: color2gray.py  loader.py
src/models/: hybrid_qcnn.py  layers.py
src/quantum/: encoder.py  qconv.py  qpool.py
src/scripts/: heatmap.py  plot_curves.py  preprocess.py  report.py  train.py
src/training/: evaluate.py  trainer.py
src/utils/: __init__.py  logging.py  paths.py  seed.py
tests/: test_patch_grid_size.py  test_paths.py  test_resolve_run_dir.py  test_smoke.py
